# orthanc-stone

./: .hgignore  .hgtags  AUTHORS  CITATION.cff  CMakeLists.txt  README  README.md  TODO
Applications/: BinarySemaphore.h  (+9 more)
Applications/Samples/: BasicPetCtFusionApplication.h  CMakeLists.txt  EmptyApplication.h  LayoutPetCtFusionApplication.h  README.md  SampleApplicationBase.h  SampleApplicationContext.cpp  SampleApplicationContext.h  SampleInteractor.h  SampleList.h  SampleMainNative.cpp  SampleMainSdl.cpp  SampleMainWasm.cpp  SimpleViewerApplication.h  SimpleViewerApplicationSingleFile.h  SingleFrameApplication.h  SingleFrameEditorApplication.h  SingleVolumeApplication.h  StoneSampleCommands_generated.hpp  StoneSampleCommands_generated.ts  SynchronizedSeriesApplication.h  TestPatternApplication.h  build-wasm-ext.sh  build-wasm-samples.sh  build-wasm.sh  build-wasm.sh.old  build-web-ext.sh  build-web.sh  get-requirements-windows.ps1  nginx.local.conf  samples-library.js
Applications/Samples/Common/: RtViewerApp.cpp  RtViewerApp.h  RtViewerView.cpp  RtViewerView.h  SampleHelpers.h
Applications/Samples/CtPetDoseStructFusion/: AppStatus.h  CMakeLists.txt  CtPetDoseStructFusionApplication.cpp  CtPetDoseStructFusionApplication.h  MainWidgetInteractor.cpp  MainWidgetInteractor.h  Messages.h  ThumbnailInteractor.cpp  ThumbnailInteractor.h
Applications/Samples/Deprecated/: SampleApplicationBase.h  SampleInteractor.h  SampleMainNative.cpp  Samples-status.md  SimpleViewerApplicationSingleFile.h  SingleFrameEditorApplication.h  SingleVolumeApplication.h  StoneSampleCommands_generated.hpp  TestPatternApplication.h  nginx.local.conf  tsconfig-stone.json
Applications/Samples/Qt/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SampleMainWindow.cpp  SampleMainWindow.h  SampleMainWindow.ui  SampleMainWindowWithButtons.cpp  SampleMainWindowWithButtons.h  SampleMainWindowWithButtons.ui  SampleQtApplicationRunner.h
Applications/Samples/RtViewerPlugin/: CMakeLists.txt  OrthancExplorer.js  Plugin.cpp
Applications/Samples/Sdl/: BoostExtendedConfiguration.cmake  CMakeLists.txt  SdlHelpers.h  Utilities.cmake
Applications/Samples/SimpleViewer/: ApplicationCommands.fbs  MainWidgetInteractor.cpp  MainWidgetInteractor.h  Messages.h  SimpleViewerApplication.cpp  SimpleViewerApplication.h  ThumbnailInteractor.cpp  ThumbnailInteractor.h
Applications/Samples/Web/: index.html  samples-styles.css  simple-viewer-single-file.html  simple-viewer-single-file.ts  simple-viewer-single-file.tsconfig.json  simple-viewer.html  simple-viewer.ts  single-frame-editor.html  single-frame-editor.ts  single-frame-editor.tsconfig.json  single-frame.html  single-frame.ts  single-frame.tsconfig.json  tsconfig-samples.json  tsconfig-simple-viewer.json
Applications/Samples/WebAssembly/: CMakeLists.txt  NOTES.txt  docker-build.sh  docker-internal.sh
Applications/Samples/rt-viewer-demo/: CMakeLists.txt  build-sdl-msvc15.ps1  index.html  main.cpp  rt-viewer-demo.html  start-serving-files.sh  stop-serving-files.sh
Applications/StoneWebViewer/WebAssembly/: CMakeLists.txt  DeepLearningWorker.proto  IStoneWebViewerContext.h  JavaScriptLibraries.cmake  NOTES.txt  ParseWebAssemblyExports.py  StoneWebViewer.cpp  docker-build.sh  docker-internal.sh
OrthancStone/UnitTestsSources/: CMakeLists.txt  ComputationalGeometryTests.cpp  DicomTests.cpp  GenericToolboxTests.cpp  GeometryToolboxTests.cpp  ImageToolboxTests.cpp  PixelTestPatternsTests.cpp  SortedFramesCreateTest.py  SortedFramesTests.cpp  TestCommands.cpp  TestMessageBroker.cpp  TestStrategy.cpp  TestStructureSet.cpp  TestStructureSet.json  UnitTestsMain.cpp  UnitTestsSources.cmake  VolumeRenderingTests.cpp
OrthancStone/UnitTestsSources/Graveyard/: TestStructureSet_BGO.cpp
OrthancStone/UnitTestsSources/WebAssembly/: CMakeLists.txt
RenderingPlugin/: CMakeLists.txt
RenderingPlugin/Resources/: SyncOrthancFolder.py
RenderingPlugin/Sources/: OrthancPluginConnection.cpp  OrthancPluginConnection.h  Plugin.cpp
Resources/CodeGeneration/testCppHandler/: CMakeLists.txt  README.md  main.cpp
Resources/CodeGeneration/testWasmIntegrated/: CMakeLists.txt  DefaultLibrary.js  build-web.sh  build.sh  main.cpp  serve.py  styles.css  testWasmIntegrated.html  testWasmIntegrated.ts  testWasmIntegratedCpp_api.yaml
Samples/Sdl/: BasicScene.cpp  BoostExtendedConfiguration.cmake  CMakeLists.txt  FusionMprSdl.cpp  FusionMprSdl.h  Loader.cpp  RadiographyEditor.cpp  SdlHelpers.h  TrackerSample.cpp  TrackerSampleApp.cpp  TrackerSampleApp.h  Utilities.cmake  cpp.hint
Samples/Sdl/RtViewer/: CMakeLists.txt  CMakeSettings.json  RtViewerSdl.cpp
Samples/Sdl/SimpleViewer/: CMakeLists.txt  CMakeSettings.json  SdlSimpleViewer.cpp  SdlSimpleViewerApplication.h
Samples/Sdl/SingleFrameViewer/: CMakeLists.txt  SdlSimpleViewer.cpp  SdlSimpleViewerApplication.h  SimpleViewer.cpp
Samples/WebAssembly/: BasicMPR.cpp  BasicMPR.html  BasicScene.cpp  BasicScene.html  CMakeLists.txt  Configuration.json  NOTES.txt  app.js  dev.h  docker-build.sh  docker-internal.sh  index.html
Samples/WebAssembly/RtViewer/: CMakeLists.txt  OBSOLETE.cpp  OSBOLETE.cpp  RtViewerWasm.cpp  RtViewerWasm.html  RtViewerWasmApp.js  index.html
StoneWebViewer/Plugin/: CMakeLists.txt  OrthancExplorer.js  Plugin.cpp  docker-build.sh  docker-internal.sh
StoneWebViewer/WebAssembly/: CMakeLists.txt  NOTES.txt  ParseWebAssemblyExports.py  StoneWebViewer.cpp  Test.cpp  docker-build.sh  docker-internal.sh
UnitTestsSources/: CMakeLists.txt  ComputationalGeometryTests.cpp  DicomTests.cpp  GenericToolboxTests.cpp  GeometryToolboxTests.cpp  ImageToolboxTests.cpp  PixelTestPatternsTests.cpp  SortedFramesCreateTest.py  SortedFramesTests.cpp  TestCommands.cpp  TestExceptions.cpp  TestMessageBroker.cpp  TestMessageBroker2.cpp  TestMessageBroker2_connect_ok.cpp  TestMessageBroker2_promise_and_connect_ok.cpp  TestStrategy.cpp  TestStructureSet.cpp  UnitTestsMain.cpp  UnitTestsSources.cmake  VolumeRenderingTests.cpp
UnitTestsSources/Graveyard/: TestStructureSet_BGO.cpp
UnitTestsSources/WebAssembly/: CMakeLists.txt  NOTES.txt  index.html
(+1577 files in other folders)
